--- a/dbManager/src/main/resources/config/mysql.properties
+++ b/dbManager/src/main/resources/config/mysql.properties
@@ -6,8 +6,8 @@ source.allowPublicKeyRetrieval=false
 source.serverTimezone=UTC
 source.maximumPoolSize=25
 source.minimumIdle=60000
-source.maxLifetime=3000000
-source.connectionTimeout=30000
+source.maxLifetime=300000
+source.connectionTimeout=300000
 
 
 destination.jdbcUrl=jdbc:mysql://192.168.1.240:3306/dct_migration_testing_v2
@@ -18,5 +18,5 @@ destination.allowPublicKeyRetrieval=false
 destination.serverTimezone=UTC
 destination.maximumPoolSize=25
 destination.minimumIdle=60000
-destination.maxLifetime=3000000
-destination.connectionTimeout=30000
+destination.maxLifetime=300000
+destination.connectionTimeout=300000
